@@ -1,5 +1,14 @@
 2002-01-20  Mo DeJong  <mdejong@users.sourceforge.net>
 
+	* src/jacl/tcl/lang/Channel.java (write, flush):
+	Don't mess with the eof flag while writing or
+	flushing since it only applies to a read operation.
+	* src/jacl/tcl/lang/TclIO.java (unregisterChannel):
+	Improve diagnostic message printed when something goes
+	seriously wrong with a close command on a channel.
+
+2002-01-20  Mo DeJong  <mdejong@users.sourceforge.net>
+
 	* src/jacl/tcl/lang/SocketChannel.java (SocketChannel): Raise
 	an IOException instead of catching it and raising a TclException.
 	* src/jacl/tcl/lang/SocketCmd.java (cmdProc): Catch an
